base-installer (1.93) UNRELEASED; urgency=low

  * Improve kernel selection for AMD64. All k8 and most k7 systems support the
    686 kernel flavor. Only older k7 systems without SSE support need 486.
    Based on documentation the divider seems to be at family 6, model 6.
    Closes: #490542.

 -- Frans Pop <fjp@debian.org>  Tue, 15 Jul 2008 12:11:01 +0200

base-installer (1.92) unstable; urgency=low

  * Call base-installer.d hooks after running debootstrap, for consistency
    with live-installer. (So, pre_install_hooks is run after bootstrap, but
    before anything is installed with apt. So the name still makes a kind
    of sense, if you squint..)
  * Remove sources.list before running base-installer.d hooks. Otherwise,
    apt-install will try to run apt, rather than queuing, and apt is not
    configured yet.

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Slovenian (sl.po) by Matej Kovacic
  * Tagalog (tl.po) by Eric Pareja
  * Turkish (tr.po) by Mert Dirik
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Joey Hess <joeyh@debian.org>  Sat, 21 Jun 2008 15:46:22 -0400

base-installer (1.91) unstable; urgency=low

  [ Updated translations ]
  * Dzongkha (dz.po) by Jurmey Rabgay(Bongop) (DIT,BHUTAN)
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Hungarian (hu.po) by SZERVÁC Attila
  * Indonesian (id.po) by Arief S Fitrianto
  * Korean (ko.po) by Changwoo Ryu
  * Marathi (mr.po) by Sampada
  * Norwegian Bokmal (nb.po) by Hans Fredrik Nordhaug
  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll
  * Punjabi (Gurmukhi) (pa.po) by Amanpreet Singh Alam
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Otavio Salvador <otavio@debian.org>  Thu, 08 May 2008 00:05:41 -0300

base-installer (1.90) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Add versatile as known armel kernel flavour.

  [ Frans Pop ]