@@ -11,3 +11,4 @@ usable \
   linux-image-2.6.25-1-486 \
   linux-image-2.6.25-1-686 \
   linux-image-2.6.25-1-686-bigmem
+env KERNEL_FLAVOUR 486
