@@ -1,18 +1,20 @@
-cpuinfo pentium-d-2p.cpuinfo
+cpuinfo pentium-4M.cpuinfo
+machine i686
 majors 2.6
-flavour 686
+flavour 686-bigmem
 env SPEAKUP /nonexistent
 kernel-2.6 \
+  linux-image-2.6-686-bigmem \
   linux-image-2.6-686 \
   linux-image-2.6-486
 usable \
   linux-image-2.6-486 \
-  linux-image-2.6-686-bigmem \
   linux-image-2.6-686 \
+  linux-image-2.6-686-bigmem \
   linux-image-2.6.18-1-486 \
-  linux-image-2.6.18-1-686-bigmem \
-  linux-image-2.6.18-1-686
+  linux-image-2.6.18-1-686 \
+  linux-image-2.6.18-1-686-bigmem
 unusable \
   linux-image-2.6-k7 \
   linux-image-2.6.18-1-k7
-env KERNEL_FLAVOUR 486
+env KERNEL_FLAVOUR 686-bigmem
